--- a/faculty/faculty_register.html
+++ b/faculty/faculty_register.html
@@ -25,7 +25,7 @@
                 </label>
                 <label class="mb-2">
                     <span class="text-gray-700 dark:text-gray-300">Password:</span>
-                    <input type="faculty_password" name="password" required class="border rounded-md p-2 focus:outline-none focus:border-green-500">
+                    <input type="password" name="faculty_password" required class="border rounded-md p-2 focus:outline-none focus:border-green-500">
                 </label>
                 <label class="mb-2">
                     <span class="text-gray-700 dark:text-gray-300">Courses Handling:</span>
